// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Components > Atoms > Button > Snapshot > Should match snapshot basic anchor 1`] = `
<div>
  <a
    class="flex items-center justify-between gap-4 rounded-full transition-colors ease-in-out duration-300 font-medium pl-6 pr-6 text-lg bg-amber-400 hover:bg-amber-600 text-slate-900"
    data-testid="button-anchor"
    href="https://example.com"
  >
     
    <span
      class="w-100"
    >
      My Button Test
    </span>
     
  </a>
</div>
`;

exports[`Components > Atoms > Button > Snapshot > Should match snapshot basic button 1`] = `
<div>
  <button
    class="flex items-center justify-between gap-4 rounded-full transition-colors ease-in-out duration-300 font-medium pl-6 pr-6 text-lg bg-amber-400 hover:bg-amber-600 text-slate-900"
    data-testid="button-type"
  >
     
    <span
      class="w-100"
    >
      My Button Test
    </span>
     
  </button>
</div>
`;
